force-app/main/default/objects/PerformanceBenchmark__c/PerformanceBenchmark__c.object-meta.xml
<CustomObject>
    <label>PerformanceBenchmark</label>
    <nameField>
        <label>PerformanceBenchmark Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PerformanceBenchmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>