force-app/main/default/objects/PerformanceBenchmark__c/fields/MemoryUsage__c.field-meta.xml
<CustomField>
    <fullName>MemoryUsage__c</fullName>
    <label>MemoryUsage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>