force-app/main/default/objects/PerformanceBenchmark__c/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <label>OperationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOCUMENT_GENERATION</fullName>
            </value>
            <value>
                <fullName>COMPLIANCE_CHECK</fullName>
            </value>
            <value>
                <fullName>SIGNATURE_REQUEST</fullName>
            </value>
            <value>
                <fullName>PDF_GENERATION</fullName>
            </value>
            <value>
                <fullName>TEMPLATE_PROCESSING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>