force-app/main/default/objects/PerformanceBenchmark__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>