force-app/main/default/objects/PerformanceBenchmark__c/fields/SLACompliant__c.field-meta.xml
<CustomField>
    <fullName>SLACompliant__c</fullName>
    <formula>ExecutionTime__c &lt; 5000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLACompliant</label>
    <type>Checkbox</type>
</CustomField>