force-app/main/default/objects/PerformanceBenchmark__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>StartTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>