force-app/main/default/objects/PerformanceBenchmark__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PerformanceBenchmarks</relationshipName>
    <type>Lookup</type>
</CustomField>